// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pane has a left offset as determined by the first visible column 1`] = `
<div
  className="root overlay"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="text"
    onMouseDown={[Function]}
    style={
      Object {
        "left": -25,
      }
    }
  />
</div>
`;

exports[`Pane only renders visible lines 1`] = `
<div
  className="root overlay"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="text"
    onMouseDown={[Function]}
    style={
      Object {
        "left": -0,
      }
    }
  >
    <Line>
      0
    </Line>
    <Line>
      1
    </Line>
    <Line>
      2
    </Line>
    <Line>
      3
    </Line>
    <Line>
      4
    </Line>
  </div>
</div>
`;

exports[`Pane renders LineNumbers when so configured 1`] = `
<div
  className="root overlay"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <LineNumbers
    className="numbers"
    innerRef={[Function]}
    paneId={1}
  />
  <div
    className="text"
    onMouseDown={[Function]}
    style={
      Object {
        "left": -0,
      }
    }
  />
</div>
`;

exports[`Pane renders a Cursor in the current pane 1`] = `
<div
  className="root overlay"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="text"
    onMouseDown={[Function]}
    style={
      Object {
        "left": -0,
      }
    }
  >
    <Cursor
      paneId={1}
    />
  </div>
</div>
`;

exports[`Pane renders a border when it is not the first and there are no line numbers 1`] = `
<div
  className="root overlay"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="text border"
    onMouseDown={[Function]}
    style={
      Object {
        "left": -0,
      }
    }
  />
</div>
`;

exports[`Pane renders a border when it is not the first and there are no line numbers 2`] = `
<div
  className="root overlay"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <LineNumbers
    className="numbers"
    innerRef={[Function]}
    paneId={1}
  />
  <div
    className="text"
    onMouseDown={[Function]}
    style={
      Object {
        "left": -0,
      }
    }
  />
</div>
`;

exports[`Pane renders empty content 1`] = `
<div
  className="root overlay"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="text"
    onMouseDown={[Function]}
    style={
      Object {
        "left": -0,
      }
    }
  />
</div>
`;

exports[`Pane renders lines of code 1`] = `
<div
  className="root overlay"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="text"
    onMouseDown={[Function]}
    style={
      Object {
        "left": -0,
      }
    }
  >
    <Line>
      hello, world!
    </Line>
    <Line>
      this is just marvellous!
    </Line>
  </div>
</div>
`;

exports[`Pane starts rendering lines from the first visible row as configured 1`] = `
<div
  className="root overlay"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="text"
    onMouseDown={[Function]}
    style={
      Object {
        "left": -0,
      }
    }
  >
    <Line>
      10
    </Line>
    <Line>
      11
    </Line>
    <Line>
      12
    </Line>
    <Line>
      13
    </Line>
    <Line>
      14
    </Line>
  </div>
</div>
`;
